# iai_maps

./: .gitignore  .travis.yml  CMakeLists.txt  package.xml
.travis/: build
Media/models/: cash_register.xacro.in  chair.xacro.in  cnc.urdf.xml  cnc.xacro.in  glasses.xacro.in  test_glasses.xacro.in  wine_cooler.xacro.in
defs/: util_defs.xacro.in
defs/ias_kitchen/: cuboid.xacro.in  fridge_block.xacro.in  furniture_defs.xacro.in  furniture_defs.xml  island_block.xacro.in  materials.xacro.in  oven_block.xacro.in  shopping_block.xacro.in  sink_block.xacro.in  small_table.xacro.in  small_table.xml  staircase.xacro.in  table.xacro.in  table.xml
launch/: kitchen_with_state_publisher.launch
meshs/: 35HP_ENGINE_noCable_easy.ply  35HP_ENGINE_noCable_easy.stl  35HP_ENGINE_noCable_easy_connected_parts.dae  35HP_ENGINE_noCable_easy_connected_parts.ply  Abstract.dae  Abstract.stl  abstract.blend  abstract.blend1  abstract.blend2  backward_easy.dae  backward_easy.stl  building_one.stl  buildings_one.stl  buildings_reduced.stl  buildings_rendering.stl  cable_funnel_light.stl  crack.stl  funnel_r1_l1.stl  funnel_r1_l2.stl  funnel_r1_l4.stl  funnel_r20_l2.stl  funnel_r2_l1.stl  funnel_r2_l2.stl  funnel_r2_l4.stl  funnel_r4_l1.stl  funnel_r4_l2.stl  funnel_r4_l4.stl  funnel_r7l1.stl  grid.stl  grid_light.stl  hole_big.stl  hole_small.stl  powerplant_noTop.stl  powerplant_simplification.stl
room/: allInOne.urdf.xml  bio_area.urdf.xml  bio_area.xacro.in  buildings.xacro.in  buildings_reduced.xacro.in  cnc_area.urdf.xml  cnc_area.xacro.in  crack.xacro.in  engine_noCable.xacro.in  floor_with_bar.xacro.in  funnel.xacro.in  funnel_r2_l4.xacro.in  funnel_r4_l4.xacro.in  grid.xacro.in  hole.xacro.in  house.xacro.in  kitchen_area.urdf.xml  kitchen_area.xacro.in  lab_macros.xacro.in  labyrinth.xacro.in  maze.xacro.in  maze2.xacro.in  powerplant.xacro.in  powerplant_notop.xacro.in  room.urdf.xml  room.xacro.in  shopping_area.urdf.xml  shopping_area.xacro.in  staircase.xacro.in  table.xacro.in  table_with_pillar.xacro.in  test.urdf.xml  test.xacro.in  tunnel.xacro.in  tunnelSmall.xacro.in  worktables.urdf.xml
room/srdf/: abstract.xacro.in  allInOne.xacro.in  buildings.xacro.in  colorTest.xacro.in  crack.xacro.in  engine_noCable.xacro.in  floor_with_bar.xacro.in  funnel.xacro.in  funnel_r1_l1.xacro.in  funnel_r1_l2.xacro.in  funnel_r1_l4.xacro.in  funnel_r2_l1.xacro.in  funnel_r2_l2.xacro.in  funnel_r4_l1.xacro.in  funnel_r4_l2.xacro.in  grid.xacro.in  hole.xacro.in  hole_small.xacro.in  house.xacro.in  kitchen_area.xacro.in  labyrinth.xacro.in  labyrinth2.xacro.in  maze.xacro.in  maze2.xacro.in  powerplant.xacro.in  powerplant_notop.xacro.in  room.xacro.in  staircase.xacro.in  table.xacro.in  table_with_pillar.xacro.in  town.xacro.in  tunnel.xacro.in  tunnelSmall.xacro.in  worktables.xacro.in
room/srdf/moveit/: kitchen_area.srdf
